fixed the input getting too wide causing to trigger wrap even if there is only one item

--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ body {
   }
 
   li.email-input {
-    width: 100%;
+    flex: 1 0 50%;
     height: 100%;
   }
 
